<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>c_wrapper</name>
  <version>0.0.1</version>
  <description>Useful packages for C-lang</description>
  <maintainer email="ogura@smilerobotics.com">Takashi Ogura</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>c_wrapper_ros2</exec_depend>
  <exec_depend>c_wrapper_nav2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
